--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -9,6 +9,7 @@ django-cors-headers==4.7.0
 djangorestframework==3.15.2
 idna==3.10
 oauthlib==3.2.2
+psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
 requests==2.32.3
