--- a/frontend/package.json
+++ b/frontend/package.json
@@ -23,6 +23,7 @@
     "@mantine/notifications": "^7.16.2",
     "@tabler/icons-react": "^3.30.0",
     "dayjs": "^1.11.13",
+    "javascript-time-ago": "^2.5.11",
     "react": "^19.0.0",
     "react-dom": "^19.0.0",
     "react-router": "^7.1.5",
