--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,19 +1,39 @@
+amqp==5.3.1
 asgiref==3.8.1
+async-timeout==5.0.1
+billiard==4.2.1
+celery==5.4.0
 certifi==2025.1.31
 cffi==1.17.1
 charset-normalizer==3.4.1
+click==8.1.8
+click-didyoumean==0.3.1
+click-plugins==1.1.1
+click-repl==0.3.0
+cron-descriptor==1.4.5
 cryptography==44.0.0
 Django==5.1.6
 django-allauth==65.4.0
+django-celery-beat==2.7.0
 django-cors-headers==4.7.0
+django-timezone-field==7.1
 djangorestframework==3.15.2
 idna==3.10
+kombu==5.4.2
 oauthlib==3.2.2
+prompt_toolkit==3.0.50
 psycopg2==2.9.10
 pycparser==2.22
 PyJWT==2.10.1
+python-crontab==3.2.0
+python-dateutil==2.9.0.post0
+redis==5.2.1
 requests==2.32.3
 requests-oauthlib==2.0.0
+six==1.17.0
 sqlparse==0.5.3
 typing_extensions==4.12.2
+tzdata==2025.1
 urllib3==2.3.0
+vine==5.1.0
+wcwidth==0.2.13
