--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -18,16 +18,21 @@ django-celery-beat==2.7.0
 django-cors-headers==4.7.0
 django-timezone-field==7.1
 djangorestframework==3.15.2
+exceptiongroup==1.2.2
 greenlet==3.1.1
 idna==3.10
+iniconfig==2.0.0
 kombu==5.4.2
 oauthlib==3.2.2
+packaging==24.2
 playwright==1.50.0
+pluggy==1.5.0
 prompt_toolkit==3.0.50
 psycopg2==2.9.10
 pycparser==2.22
 pyee==12.1.1
 PyJWT==2.10.1
+pytest==8.3.5
 python-crontab==3.2.0
 python-dateutil==2.9.0.post0
 redis==5.2.1
@@ -36,6 +41,7 @@ requests-oauthlib==2.0.0
 sentry-sdk==2.22.0
 six==1.17.0
 sqlparse==0.5.3
+tomli==2.2.1
 typing_extensions==4.12.2
 tzdata==2025.1
 urllib3==2.3.0
