--- a/frontend/package.json
+++ b/frontend/package.json
@@ -21,6 +21,8 @@
     "@mantine/hooks": "^7.16.2",
     "@mantine/modals": "^7.16.2",
     "@mantine/notifications": "^7.16.2",
+    "@sentry/react": "^9.10.0",
+    "@sentry/vite-plugin": "^3.2.3",
     "@tabler/icons-react": "^3.30.0",
     "dayjs": "^1.11.13",
     "javascript-time-ago": "^2.5.11",
