--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -1,8 +1,3 @@
-volumes:
-  pingcycle_local_postgres_data: {}
-  pingcycle_local_postgres_data_backups: {}
-  pingcycle_local_redis_data: {}
-
 services:
   django: &django
     build:
@@ -13,12 +8,21 @@ services:
     depends_on:
       - postgres
       - redis
+    environment:
+      POSTGRES_USER: postgres
+      POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
+      POSTGRES_HOST: ${DB_HOST}
+      POSTGRES_PORT: ${DB_PORT}
+      APP_DB: ${DB_NAME}
+      DB_USER: ${DB_USER}
+      DB_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - .:/app:z
       - /etc/pingcycle_config.json:/etc/pingcycle_config.json
     ports:
       - '8000:8000'
     command: /start
+    networks:
+      - pingcycle_net
 
   postgres:
     image: postgres:16
@@ -34,12 +38,16 @@ services:
     volumes:
       - pingcycle_local_postgres_data:/var/lib/postgresql/data
       - ./db-scripts/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
+    networks:
+      - pingcycle_net
 
   redis:
     image: docker.io/redis:6
     container_name: pingcycle_local_redis
     volumes:
       - pingcycle_local_redis_data:/data
+    networks:
+      - pingcycle_net
 
   celeryworker:
     <<: *django
@@ -50,6 +58,8 @@ services:
       - postgres
     ports: []
     command: /start-celeryworker
+    networks:
+      - pingcycle_net
 
   celerybeat:
     <<: *django
@@ -60,21 +70,35 @@ services:
       - postgres
     ports: []
     command: /start-celerybeat
+    networks:
+      - pingcycle_net
 
   frontend:
     build: 
       context: ./frontend
-      dockerfile: ./Dockerfile.dev
+      dockerfile: Dockerfile.dev
+    image: pingcycle_local_frontend
     container_name: "pingcycle_frontend"
     volumes:
-      - ./frontend:/app
-      - node-modules:/app/node_modules
+      - node_modules:/app/node_modules
     ports:
       - '3000:3000'
     environment:
-      - VITE_ENV={FRONTEND_ENV}
-      - VITE_API_URL={FRONTEND_API_URL}
-      - VITE_TELEGRAM_BOT_USERNAME={FRONTEND_TELEGRAM_BOT_USERNAME}
-      - VITE_SENTRY_DSN={FRONTEND_SENTRY_DSN}     
+      - VITE_ENV=${FRONTEND_ENV}
+      - VITE_API_URL=${FRONTEND_API_URL} # Point to the `django` service
+      - VITE_TELEGRAM_BOT_USERNAME=${FRONTEND_TELEGRAM_BOT_USERNAME}
+      - VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}     
     depends_on:
-      - "backend"
+      - "django"
+    networks:
+      - pingcycle_net
+
+volumes:
+  pingcycle_local_postgres_data: {}
+  pingcycle_local_postgres_data_backups: {}
+  pingcycle_local_redis_data: {}
+  node_modules: {}
+
+networks:
+  pingcycle_net:
+    driver: bridge
