--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -2,9 +2,9 @@ services:
   django: &django
     build:
       context: ./backend
-      dockerfile: ./compose/local/Dockerfile
-    image: pingcycle_local_django
-    container_name: pingcycle_local_django
+      dockerfile: ./compose/production/Dockerfile
+    image: pingcycle_prod_django
+    container_name: pingcycle_prod_django
     depends_on:
       - postgres
       - redis
@@ -18,15 +18,15 @@ services:
       DB_PASSWORD: ${DB_PASSWORD}
     volumes:
       - /etc/pingcycle_config.json:/etc/pingcycle_config.json
-    ports:
-      - '8000:8000'
+    expose:
+      - 8000
     command: /start
     networks:
       - pingcycle_net
 
   postgres:
     image: postgres:16
-    container_name: pingcycle_local_postgres
+    container_name: pingcycle_prod_postgres
     environment:
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
@@ -36,23 +36,23 @@ services:
       DB_USER: ${DB_USER}
       DB_PASSWORD: ${DB_PASSWORD}
     volumes:
-      - pingcycle_local_postgres_data:/var/lib/postgresql/data
+      - pingcycle_prod_postgres_data:/var/lib/postgresql/data
       - ./db-scripts/init-database.sh:/docker-entrypoint-initdb.d/init-database.sh
     networks:
       - pingcycle_net
 
   redis:
     image: docker.io/redis:6
-    container_name: pingcycle_local_redis
+    container_name: pingcycle_prod_redis
     volumes:
-      - pingcycle_local_redis_data:/data
+      - pingcycle_prod_redis_data:/data
     networks:
       - pingcycle_net
 
   celeryworker:
     <<: *django
-    image: pingcycle_local_celeryworker
-    container_name: pingcycle_local_celeryworker
+    image: pingcycle_prod_celeryworker
+    container_name: pingcycle_prod_celeryworker
     depends_on:
       - redis
       - postgres
@@ -63,8 +63,8 @@ services:
 
   celerybeat:
     <<: *django
-    image: pingcycle_local_celerybeat
-    container_name: pingcycle_local_celerybeat
+    image: pingcycle_prod_celerybeat
+    container_name: pingcycle_prod_celerybeat
     depends_on:
       - redis
       - postgres
@@ -76,16 +76,14 @@ services:
   frontend:
     build: 
       context: ./frontend
-      dockerfile: Dockerfile.dev
-    image: pingcycle_local_frontend
+      dockerfile: Dockerfile.prod
+    image: pingcycle_prod_frontend
     container_name: "pingcycle_prod_frontend"
-    volumes:
-      - node_modules:/app/node_modules
     ports:
-      - '3000:3000'
+      - 80:80
     environment:
       - VITE_ENV=${FRONTEND_ENV}
-      - VITE_API_URL=${FRONTEND_API_URL} # Point to the `django` service
+      - VITE_API_URL=${FRONTEND_API_URL}
       - VITE_TELEGRAM_BOT_USERNAME=${FRONTEND_TELEGRAM_BOT_USERNAME}
       - VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}     
     depends_on:
@@ -94,10 +92,9 @@ services:
       - pingcycle_net
 
 volumes:
-  pingcycle_local_postgres_data: {}
-  pingcycle_local_postgres_data_backups: {}
-  pingcycle_local_redis_data: {}
-  node_modules: {}
+  pingcycle_prod_postgres_data: {}
+  pingcycle_prod_postgres_data_backups: {}
+  pingcycle_prod_redis_data: {}
 
 networks:
   pingcycle_net:
