--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -1,29 +1,22 @@
-# Use an official Node.js runtime as the base image
-FROM node:22-alpine
+###########
+# BUILDER #
+###########
+FROM node:lts-slim as builder
 
-# Set the working directory
-WORKDIR /app
+COPY package.json package-lock.json ./
+RUN npm install && mkdir /react-frontend && mv ./node_modules ./react-frontend
 
-# Copy package.json and package-lock.json (or yarn.lock) to the working directory
-COPY package*.json ./
-
-# Install dependencies
-RUN npm install
-
-# Copy the rest of the application's source code to the container
+WORKDIR /react-frontend
 COPY . .
 
-# Build the React application for production
 RUN npm run build
 
-# Use a minimal nginx image for serving the built files
-FROM nginx:alpine
-
-# Copy the built files from the build stage
-COPY --from=build /app/build /usr/share/nginx/html
-
-# Expose port 80
+#########
+# FINAL #
+#########
+FROM nginx:1.19.2-alpine
+COPY --from=builder /react-frontend/build /usr/share/nginx/html
+RUN rm /etc/nginx/conf.d/default.conf
+COPY nginx/nginx.conf /etc/nginx/conf.d
 EXPOSE 80
-
-# Start nginx
 CMD ["nginx", "-g", "daemon off;"]
