--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -18,5 +18,5 @@ FROM nginx:1.19.2-alpine
 COPY --from=builder /react-frontend/build /usr/share/nginx/html
 RUN rm /etc/nginx/conf.d/default.conf
 COPY nginx/nginx.conf /etc/nginx/conf.d
-EXPOSE 80
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
