--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -14,6 +14,7 @@ cron-descriptor==1.4.5
 cryptography==44.0.0
 Django==5.1.6
 django-allauth==65.4.0
+django-anymail==13.0
 django-celery-beat==2.7.0
 django-cors-headers==4.7.0
 django-timezone-field==7.1
