--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -6,6 +6,10 @@ server {
     server_name pingcycle.org www.pingcycle.org;
     server_tokens off;
 
+    # Log settings
+    access_log /var/log/nginx/access.log;
+    error_log /var/log/nginx/error.log debug;
+
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
     }
