--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -4,9 +4,9 @@
 FROM node:lts-slim as builder
 
 COPY package.json package-lock.json ./
-RUN npm install && mkdir /react-frontend && mv ./node_modules ./react-frontend
+RUN npm install && mkdir /frontend && mv ./node_modules ./frontend
 
-WORKDIR /react-frontend
+WORKDIR /frontend
 COPY . .
 
 RUN npm run build
@@ -15,8 +15,8 @@ RUN npm run build
 # FINAL #
 #########
 FROM nginx:1.19.2-alpine
-COPY --from=builder /react-frontend/dist /usr/share/nginx/html
-RUN rm /etc/nginx/conf.d/default.conf
-COPY nginx/nginx.conf /etc/nginx/conf.d
-EXPOSE 80 443
+COPY --from=builder /frontend/dist /usr/share/nginx/html
+COPY --from=builder /frontend/nginx/nginx.conf /etc/nginx/conf.d/default.conf
+# EXPOSE 80 443
+EXPOSE 80
 CMD ["nginx", "-g", "daemon off;"]
