--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -17,6 +17,5 @@ RUN npm run build
 FROM nginx:1.19.2-alpine
 COPY --from=builder /frontend/dist /usr/share/nginx/html
 COPY --from=builder /frontend/nginx/nginx.conf /etc/nginx/conf.d/default.conf
-# EXPOSE 80 443
-EXPOSE 80
+EXPOSE 80 443
 CMD ["nginx", "-g", "daemon off;"]
