--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -9,11 +9,11 @@ server {
         root /var/www/certbot;
     }
 
-    # location / {
-    #   root   /usr/share/nginx/html;
-    #   index  index.html index.htm;
-    #   try_files $uri $uri/ /index.html =404;
-    # }
+    location / {
+      root   /usr/share/nginx/html;
+      index  index.html index.htm;
+      try_files $uri $uri/ /index.html =404;
+    }
 
     location / {
         return 301 https://pingcycle.org$request_uri;
