--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -15,9 +15,9 @@ server {
       try_files $uri $uri/ /index.html =404;
     }
 
-    location / {
-        return 301 https://pingcycle.org$request_uri;
-    }
+    # location / {
+    #     return 301 https://pingcycle.org$request_uri;
+    # }
 
 }
 
