--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -5,9 +5,9 @@ server {
     server_name pingcycle.org www.pingcycle.org;
     server_tokens off;
 
-    # location /.well-known/acme-challenge/ {
-    #     alias /var/www/certbot;
-    # }
+    location /.well-known/acme-challenge/ {
+        alias /var/www/certbot;
+    }
 
     location / {
       root   /usr/share/nginx/html;
