--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -6,7 +6,7 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        alias /var/www/certbot;
+        alias /var/www/certbot/;
     }
 
     location / {
