--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -1,12 +1,15 @@
 # Frontend
 server {
-    listen 80;
+    listen        80;
+    listen     [::]:80;
 
     server_name pingcycle.org www.pingcycle.org;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        alias /var/www/certbot/;
+        root /var/www/certbot/.well-known/acme-challenge;
+        default_type "text/plain";
+        allow all;
     }
 
     location / {
