--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -7,8 +7,8 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        # root /var/www/certbot;
-        alias /var/www/certbot/.well-known/acme-challenge/;
+        root /var/www/certbot;
+        # alias /var/www/certbot/.well-known/acme-challenge/;
         default_type "text/plain";
         allow all;
     }
