--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -1,79 +1,72 @@
 # Frontend
 server {
-    listen        80;
-    listen     [::]:80;
+    listen 80;
+    listen [::]:80;
 
     server_name pingcycle.org www.pingcycle.org;
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
         root /var/www/certbot;
-        # alias /var/www/certbot/.well-known/acme-challenge/;
         default_type "text/plain";
         allow all;
     }
 
     location / {
+        return 301 https://pingcycle.org$request_uri;
+    }
+
+}
+
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
+
+    server_name pingcycle.org;
+
+    ssl_certificate /etc/nginx/ssl/live/pingcycle.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/pingcycle.org/privkey.pem;
+    
+    location / {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
       try_files $uri $uri/ /index.html =404;
     }
-
-    # location / {
-    #     return 301 https://pingcycle.org$request_uri;
-    # }
-
 }
 
-# server {
-#     listen 443 default_server ssl http2;
+# Backend
+server {
+    listen 80;
+    listen [::]:80;
 
-#     server_name pingcycle.org;
+    server_name core.pingcycle.org;
+    server_tokens off;
 
-#     ssl_certificate /etc/nginx/ssl/live/pingcycle.org/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/pingcycle.org/privkey.pem;
-    
-#     # Reverse proxy for frontend (if using a single-page app or static site)
-#     location / {
-#         proxy_pass http://frontend:80;  # Forward requests to the frontend container
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location /.well-known/acme-challenge/ {
+        root /var/www/certbot;
+        default_type "text/plain";
+        allow all;
+    }
 
-# # Backend
-# server {
-#     listen 80;
-#     listen [::]:80;
+    location / {
+        return 301 https://core.pingcycle.org$request_uri;
+    }
+}
 
-#     server_name core.pingcycle.org;
-#     server_tokens off;
+server {
+    listen 443 ssl http2;
+    listen [::]:443 ssl http2;
 
-#     location /.well-known/acme-challenge/ {
-#         root /var/www/certbot;
-#     }
+    server_name core.pingcycle.org;
 
-#     location / {
-#         return 301 https://core.pingcycle.org$request_uri;
-#     }
-# }
+    ssl_certificate /etc/nginx/ssl/live/core.pingcycle.org/fullchain.pem;
+    ssl_certificate_key /etc/nginx/ssl/live/core.pingcycle.org/privkey.pem;
 
-# server {
-#     listen 443 ssl http2;
-#     listen [::]:443 ssl http2;
-
-#     server_name core.pingcycle.org;
-
-#     ssl_certificate /etc/nginx/ssl/live/core.pingcycle.org/fullchain.pem;
-#     ssl_certificate_key /etc/nginx/ssl/live/core.pingcycle.org/privkey.pem;
-
-#     location /api {
-#         proxy_pass http://django:8000;  # Forward requests to the Django container
-#         proxy_set_header Host $host;
-#         proxy_set_header X-Real-IP $remote_addr;
-#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-#         proxy_set_header X-Forwarded-Proto $scheme;
-#     }
-# }
+    location /api {
+        proxy_pass http://django:8000;  # Forward requests to the Django container
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+    }
+}
