--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -87,8 +87,8 @@ services:
       - VITE_API_URL=${FRONTEND_API_URL}
       - VITE_TELEGRAM_BOT_USERNAME=${FRONTEND_TELEGRAM_BOT_USERNAME}
       - VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}     
-    # depends_on:
-    #   - "django"
+    depends_on:
+      - "django"
     volumes:
       - certbot-webroot:/var/www/certbot
       - ./certbot/conf/live:/etc/nginx/ssl/live:ro
