--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -18,21 +18,21 @@ server {
 
 }
 
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
 
-    server_name pingcycle.org;
+#     server_name pingcycle.org;
 
-    ssl_certificate /etc/nginx/ssl/live/pingcycle.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/pingcycle.org/privkey.pem;
+#     ssl_certificate /etc/nginx/ssl/live/pingcycle.org/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/pingcycle.org/privkey.pem;
     
-    location / {
-      root   /usr/share/nginx/html;
-      index  index.html index.htm;
-      try_files $uri $uri/ /index.html =404;
-    }
-}
+#     location / {
+#       root   /usr/share/nginx/html;
+#       index  index.html index.htm;
+#       try_files $uri $uri/ /index.html =404;
+#     }
+# }
 
 # Backend
 server {
@@ -53,20 +53,20 @@ server {
     }
 }
 
-server {
-    listen 443 ssl http2;
-    listen [::]:443 ssl http2;
+# server {
+#     listen 443 ssl http2;
+#     listen [::]:443 ssl http2;
 
-    server_name core.pingcycle.org;
+#     server_name core.pingcycle.org;
 
-    ssl_certificate /etc/nginx/ssl/live/core.pingcycle.org/fullchain.pem;
-    ssl_certificate_key /etc/nginx/ssl/live/core.pingcycle.org/privkey.pem;
+#     ssl_certificate /etc/nginx/ssl/live/core.pingcycle.org/fullchain.pem;
+#     ssl_certificate_key /etc/nginx/ssl/live/core.pingcycle.org/privkey.pem;
 
-    location /api {
-        proxy_pass http://django:8000;  # Forward requests to the Django container
-        proxy_set_header Host $host;
-        proxy_set_header X-Real-IP $remote_addr;
-        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-        proxy_set_header X-Forwarded-Proto $scheme;
-    }
-}
+#     location /api {
+#         proxy_pass http://django:8000;  # Forward requests to the Django container
+#         proxy_set_header Host $host;
+#         proxy_set_header X-Real-IP $remote_addr;
+#         proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+#         proxy_set_header X-Forwarded-Proto $scheme;
+#     }
+# }
