handle cloudflare forwarding

--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -12,6 +12,12 @@ server {
         allow all;
     }
 
+    # Check for Cloudflare's X-Forwarded-Proto header and redirect to HTTPS only if necessary
+    if ($http_x_forwarded_proto = "http") {
+        return 301 https://pingcycle.org$request_uri;
+    }
+
+    # Default redirect rule for non-Cloudflare or standard requests
     location / {
         return 301 https://pingcycle.org$request_uri;
     }
@@ -48,6 +54,12 @@ server {
         allow all;
     }
 
+    # Check for Cloudflare's X-Forwarded-Proto header and redirect to HTTPS only if necessary
+    if ($http_x_forwarded_proto = "http") {
+        return 301 https://pingcycle.org$request_uri;
+    }
+
+    # Default redirect rule for non-Cloudflare or standard requests
     location / {
         return 301 https://core.pingcycle.org$request_uri;
     }
