--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -11,14 +11,8 @@ server {
         default_type "text/plain";
         allow all;
     }
-
-    # Check for Cloudflare's X-Forwarded-Proto header and redirect to HTTPS only if necessary
-    if ($http_x_forwarded_proto = "http") {
-        return 301 https://pingcycle.org$request_uri;
-    }
-
-    # Default redirect rule for non-Cloudflare or standard requests
-    location / {
+    
+    if ($scheme = "http") {
         return 301 https://pingcycle.org$request_uri;
     }
 
@@ -54,14 +48,8 @@ server {
         allow all;
     }
 
-    # Check for Cloudflare's X-Forwarded-Proto header and redirect to HTTPS only if necessary
-    if ($http_x_forwarded_proto = "http") {
+    if ($scheme = "http") {
         return 301 https://pingcycle.org$request_uri;
-    }
-
-    # Default redirect rule for non-Cloudflare or standard requests
-    location / {
-        return 301 https://core.pingcycle.org$request_uri;
     }
 }
 
