pass envs correctly

--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -3,6 +3,19 @@
 ###########
 FROM node:lts-slim as builder
 
+ARG VITE_API_URL
+ENV VITE_API_URL=$VITE_API_URL
+
+ARG VITE_ENV
+ENV VITE_ENV=$VITE_ENV
+
+ARG VITE_TELEGRAM_BOT_USERNAME
+ENV VITE_TELEGRAM_BOT_USERNAME=$VITE_TELEGRAM_BOT_USERNAME
+
+ARG VITE_SENTRY_DSN
+ENV VITE_SENTRY_DSN=$VITE_SENTRY_DSN
+
+
 COPY package.json package-lock.json ./
 RUN npm install && mkdir /frontend && mv ./node_modules ./frontend
 
