--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -78,10 +78,10 @@ services:
       context: ./frontend
       dockerfile: Dockerfile.prod
       args:
-        VITE_ENV=${FRONTEND_ENV}
-        VITE_API_URL=${FRONTEND_API_URL}
-        VITE_TELEGRAM_BOT_USERNAME=${FRONTEND_TELEGRAM_BOT_USERNAME}
-        VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}     
+        VITE_ENV: ${FRONTEND_ENV}
+        VITE_API_URL: ${FRONTEND_API_URL}
+        VITE_TELEGRAM_BOT_USERNAME: ${FRONTEND_TELEGRAM_BOT_USERNAME}
+        VITE_SENTRY_DSN: ${FRONTEND_SENTRY_DSN}     
     image: pingcycle_prod_frontend
     container_name: "pingcycle_prod_frontend"
     ports:
