--- a/backend/compose/local/Dockerfile
+++ b/backend/compose/local/Dockerfile
@@ -82,7 +82,6 @@ COPY . ${APP_HOME}
 
 # Install Playwright browsers and deps
 RUN --mount=type=cache,target=/var/cache/playwright,sharing=locked,id=playwright \
-  playwright install chromium \
-  && playwright install-deps chromium
+  playwright install
 
 ENTRYPOINT ["/entrypoint"]
