explictly set cookie domain

--- a/backend/compose/production/Dockerfile
+++ b/backend/compose/production/Dockerfile
@@ -80,8 +80,9 @@ RUN chmod +x /start-celerybeat
 COPY --chown=django:django . ${APP_HOME}
 
 # Install Playwright browsers and deps
-RUN --mount=type=cache,target=/var/cache/playwright,sharing=locked,id=playwright \
-  playwright install
+RUN playwright install chromium \
+  && playwright install-deps chromium
+
 # make django owner of the WORKDIR directory as well.
 RUN chown -R django:django ${APP_HOME}
 
