--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -85,9 +85,10 @@ services:
       - '3000:3000'
     environment:
       - VITE_ENV=${FRONTEND_ENV}
-      - VITE_API_URL=${FRONTEND_API_URL} # Point to the `django` service
+      - VITE_API_URL=${FRONTEND_API_URL}
       - VITE_TELEGRAM_BOT_USERNAME=${FRONTEND_TELEGRAM_BOT_USERNAME}
-      - VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}     
+      - VITE_SENTRY_DSN=${FRONTEND_SENTRY_DSN}
+      - VITE_COOKIE_DOMAIN=${FRONTEND_COOKIE_DOMAIN}       
     depends_on:
       - "django"
     networks:
