--- a/frontend/Dockerfile.prod
+++ b/frontend/Dockerfile.prod
@@ -15,6 +15,8 @@ ENV VITE_TELEGRAM_BOT_USERNAME=$VITE_TELEGRAM_BOT_USERNAME
 ARG VITE_SENTRY_DSN
 ENV VITE_SENTRY_DSN=$VITE_SENTRY_DSN
 
+ARG VITE_COOKIE_DOMAIN
+ENV VITE_COOKIE_DOMAIN=$VITE_COOKIE_DOMAIN
 
 COPY package.json package-lock.json ./
 RUN npm install && mkdir /frontend && mv ./node_modules ./frontend
