--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -11,6 +11,7 @@ services:
       - postgres
       - redis
     environment:
+      APP_HOME: ${APP_HOME}
       POSTGRES_USER: postgres
       POSTGRES_PASSWORD: ${POSTGRES_PASSWORD}
       POSTGRES_HOST: ${DB_HOST}
