fix nginx config path

--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -7,7 +7,7 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        alias /var/www/certbot/;
         default_type "text/plain";
         allow all;
     }
@@ -43,7 +43,7 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        root /var/www/certbot;
+        alias /var/www/certbot/;
         default_type "text/plain";
         allow all;
     }
