--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -7,15 +7,14 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        alias /var/www/certbot/;
+        root /var/www/certbot;
         default_type "text/plain";
         allow all;
     }
-    
-    if ($scheme = "http") {
-        return 301 https://pingcycle.org$request_uri;
-    }
 
+    location / {
+        return 301 https://$host$request_uri;
+    }
 }
 
 server {
@@ -26,7 +25,7 @@ server {
 
     ssl_certificate /etc/nginx/ssl/live/pingcycle.org/fullchain.pem;
     ssl_certificate_key /etc/nginx/ssl/live/pingcycle.org/privkey.pem;
-    
+
     location / {
       root   /usr/share/nginx/html;
       index  index.html index.htm;
@@ -43,13 +42,13 @@ server {
     server_tokens off;
 
     location /.well-known/acme-challenge/ {
-        alias /var/www/certbot/;
+        root /var/www/certbot;
         default_type "text/plain";
         allow all;
     }
 
-    if ($scheme = "http") {
-        return 301 https://pingcycle.org$request_uri;
+    location / {
+        return 301 https://$host$request_uri;
     }
 }
 
