--- a/frontend/nginx/nginx.conf
+++ b/frontend/nginx/nginx.conf
@@ -13,7 +13,7 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://pingcycle.org$request_uri;
     }
 }
 
@@ -48,7 +48,7 @@ server {
     }
 
     location / {
-        return 301 https://$host$request_uri;
+        return 301 https://core.pingcycle.org$request_uri;
     }
 }
 
