--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -5,7 +5,7 @@ services:
       dockerfile: ./compose/production/Dockerfile
       args:
         APP_HOME: ${APP_HOME}
-    image: pingcycle_prod_django
+    image: pingcycle_backend
     container_name: pingcycle_prod_django
     depends_on:
       - postgres
@@ -55,7 +55,6 @@ services:
 
   celeryworker:
     <<: *django
-    image: pingcycle_prod_celeryworker
     container_name: pingcycle_prod_celeryworker
     depends_on:
       - redis
@@ -71,7 +70,6 @@ services:
 
   celerybeat:
     <<: *django
-    image: pingcycle_prod_celerybeat
     container_name: pingcycle_prod_celerybeat
     depends_on:
       - redis
