add init and ipc setting to solve playwright zombie processes

--- a/docker-compose.local.yml
+++ b/docker-compose.local.yml
@@ -5,6 +5,7 @@ services:
       dockerfile: ./compose/local/Dockerfile
     image: pingcycle_local_django
     container_name: pingcycle_local_django
+    init: true
     depends_on:
       - postgres
       - redis
