--- a/docker-compose.production.yml
+++ b/docker-compose.production.yml
@@ -7,6 +7,7 @@ services:
         APP_HOME: ${APP_HOME}
     image: pingcycle_backend
     container_name: pingcycle_prod_django
+    init: true
     depends_on:
       - postgres
       - redis
@@ -57,6 +58,8 @@ services:
     <<: *django
     image: pingcycle_backend
     container_name: pingcycle_prod_celeryworker
+    # Recommended for Playwright chromium https://playwright.dev/docs/docker#recommended-docker-configuration
+    ipc: host
     depends_on:
       - redis
       - postgres
